--- a/package.json
+++ b/package.json
@@ -1,30 +1,335 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
+  "name": "mern-estate",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "acorn": "^8.11.1",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "any-promise": "^1.3.0",
+    "anymatch": "^3.1.3",
+    "arg": "^5.0.2",
+    "argparse": "^2.0.1",
+    "array-buffer-byte-length": "^1.0.0",
+    "array-flatten": "^1.1.1",
+    "array-includes": "^3.1.7",
+    "array.prototype.flat": "^1.3.2",
+    "array.prototype.flatmap": "^1.3.2",
+    "array.prototype.tosorted": "^1.1.2",
+    "arraybuffer.prototype.slice": "^1.0.2",
+    "asynciterator.prototype": "^1.0.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.45.0",
+    "available-typed-arrays": "^1.0.5",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "body-parser": "^1.20.1",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.22.1",
+    "bson": "^5.5.1",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.5",
+    "callsites": "^3.1.0",
+    "camelcase-css": "^2.0.1",
+    "caniuse-lite": "^1.0.30001554",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^4.1.1",
+    "concat-map": "^0.0.1",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "cross-spawn": "^7.0.3",
+    "cssesc": "^3.0.0",
+    "csstype": "^3.1.2",
+    "debug": "^4.3.4",
+    "deep-is": "^0.1.4",
+    "define-data-property": "^1.1.1",
+    "define-properties": "^1.2.1",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "didyoumean": "^1.2.2",
+    "dlv": "^1.1.3",
+    "doctrine": "^3.0.0",
+    "dotenv": "^16.3.1",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.4.568",
+    "encodeurl": "^1.0.2",
+    "es-abstract": "^1.22.3",
+    "es-iterator-helpers": "^1.0.15",
+    "es-set-tostringtag": "^2.0.2",
+    "es-shim-unscopables": "^1.0.2",
+    "es-to-primitive": "^1.2.1",
+    "esbuild": "^0.18.20",
+    "escalade": "^3.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-scope": "^7.2.2",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^9.6.1",
+    "esquery": "^1.5.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.18.2",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.3.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.15.0",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "find-up": "^5.0.0",
+    "flat-cache": "^3.1.1",
+    "flatted": "^3.2.9",
+    "for-each": "^0.3.3",
+    "forwarded": "^0.2.0",
+    "fraction.js": "^4.3.7",
+    "fresh": "^0.5.2",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.6",
+    "functions-have-names": "^1.2.3",
+    "get-intrinsic": "^1.2.2",
+    "get-symbol-description": "^1.0.0",
+    "glob": "^7.2.3",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.23.0",
+    "globalthis": "^1.0.3",
+    "gopd": "^1.0.1",
+    "graphemer": "^1.4.0",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.1",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "hasown": "^2.0.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "ignore": "^5.2.4",
+    "ignore-by-default": "^1.0.1",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.6",
+    "ip": "^2.0.0",
+    "ipaddr.js": "^1.9.1",
+    "is-array-buffer": "^3.0.2",
+    "is-async-function": "^2.0.0",
+    "is-bigint": "^1.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.13.1",
+    "is-date-object": "^1.0.5",
+    "is-extglob": "^2.1.1",
+    "is-finalizationregistry": "^1.0.2",
+    "is-generator-function": "^1.0.10",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.2",
+    "is-negative-zero": "^2.0.2",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-path-inside": "^3.0.3",
+    "is-regex": "^1.1.4",
+    "is-set": "^2.0.2",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.12",
+    "is-weakmap": "^2.0.1",
+    "is-weakref": "^1.0.2",
+    "is-weakset": "^2.0.2",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "iterator.prototype": "^1.1.2",
+    "jiti": "^1.20.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "jsx-ast-utils": "^3.3.5",
+    "kareem": "^2.5.1",
+    "keyv": "^4.5.4",
+    "levn": "^0.4.1",
+    "lilconfig": "^2.1.0",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^6.0.0",
+    "lodash.merge": "^4.6.2",
+    "loose-envify": "^1.4.0",
+    "lru-cache": "^6.0.0",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "merge2": "^1.4.1",
+    "methods": "^1.1.2",
+    "micromatch": "^4.0.5",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "mongodb": "^5.9.0",
+    "mongodb-connection-string-url": "^2.6.0",
+    "mongoose": "^7.6.3",
+    "mpath": "^0.9.0",
+    "mquery": "^5.0.0",
+    "ms": "^2.1.2",
+    "mz": "^2.7.0",
+    "nanoid": "^3.3.6",
+    "natural-compare": "^1.4.0",
+    "negotiator": "^0.6.3",
+    "node-releases": "^2.0.13",
+    "nodemon": "^3.0.1",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "normalize-range": "^0.1.2",
+    "object-assign": "^4.1.1",
+    "object-hash": "^3.0.0",
+    "object-inspect": "^1.13.1",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.4",
+    "object.entries": "^1.1.7",
+    "object.fromentries": "^2.0.7",
+    "object.hasown": "^1.1.3",
+    "object.values": "^1.1.7",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "optionator": "^0.9.3",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parent-module": "^1.0.1",
+    "parseurl": "^1.3.3",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-to-regexp": "^0.1.7",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pify": "^2.3.0",
+    "pirates": "^4.0.6",
     "postcss": "^8.4.31",
+    "postcss-import": "^15.1.0",
+    "postcss-js": "^4.0.1",
+    "postcss-load-config": "^4.0.1",
+    "postcss-nested": "^6.0.1",
+    "postcss-selector-parser": "^6.0.13",
+    "postcss-value-parser": "^4.2.0",
+    "prelude-ls": "^1.2.1",
+    "prop-types": "^15.8.1",
+    "proxy-addr": "^2.0.7",
+    "pstree.remy": "^1.1.8",
+    "punycode": "^2.3.0",
+    "qs": "^6.11.0",
+    "queue-microtask": "^1.2.3",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-is": "^16.13.1",
+    "read-cache": "^1.0.0",
+    "readdirp": "^3.6.0",
+    "reflect.getprototypeof": "^1.0.4",
+    "regexp.prototype.flags": "^1.5.1",
+    "resolve": "^2.0.0-next.5",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^3.29.4",
+    "run-parallel": "^1.2.0",
+    "safe-array-concat": "^1.0.1",
+    "safe-buffer": "^5.2.1",
+    "safe-regex-test": "^1.0.0",
+    "safer-buffer": "^2.1.2",
+    "scheduler": "^0.23.0",
+    "semver": "^6.3.1",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "set-function-length": "^1.1.1",
+    "set-function-name": "^2.0.1",
+    "setprototypeof": "^1.2.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.4",
+    "sift": "^16.0.1",
+    "simple-update-notifier": "^2.0.0",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.7.1",
+    "source-map-js": "^1.0.2",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^2.0.1",
+    "string.prototype.matchall": "^4.0.10",
+    "string.prototype.trim": "^1.2.8",
+    "string.prototype.trimend": "^1.0.7",
+    "string.prototype.trimstart": "^1.0.7",
+    "strip-ansi": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "sucrase": "^3.34.0",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.4.5"
-  }
+    "text-table": "^0.2.0",
+    "thenify": "^3.3.1",
+    "thenify-all": "^1.6.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "touch": "^3.1.0",
+    "tr46": "^3.0.0",
+    "ts-interface-checker": "^0.1.13",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "type-is": "^1.6.18",
+    "typed-array-buffer": "^1.0.0",
+    "typed-array-byte-length": "^1.0.0",
+    "typed-array-byte-offset": "^1.0.0",
+    "typed-array-length": "^1.0.4",
+    "unbox-primitive": "^1.0.2",
+    "undefsafe": "^2.0.5",
+    "undici-types": "^5.26.5",
+    "unpipe": "^1.0.0",
+    "update-browserslist-db": "^1.0.13",
+    "uri-js": "^4.4.1",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "vite": "^4.5.0",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-url": "^11.0.0",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "which-builtin-type": "^1.1.3",
+    "which-collection": "^1.0.1",
+    "which-typed-array": "^1.1.13",
+    "wrappy": "^1.0.2",
+    "yallist": "^4.0.0",
+    "yaml": "^2.3.3",
+    "yocto-queue": "^0.1.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "dev":"nodemon api/index.js",
+    "start": "node api/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
